// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cylinder cylinder 1`] = `
"v 0 0 0
v 0 0 1
v -0.5877852522924731 0 0.8090169943749475
v -0.5877852522924731 0 0.8090169943749475
v 0 0 1
v 0 1 1
v -0.5877852522924731 1 0.8090169943749475
v 0 1 0
v -0.5877852522924731 1 0.8090169943749475
v 0 1 1
v 0 0 0
v -0.5877852522924731 0 0.8090169943749475
v -0.9510565162951535 0 0.30901699437494745
v -0.9510565162951535 0 0.30901699437494745
v -0.5877852522924731 0 0.8090169943749475
v -0.5877852522924731 1 0.8090169943749475
v -0.9510565162951535 1 0.30901699437494745
v 0 1 0
v -0.9510565162951535 1 0.30901699437494745
v -0.5877852522924731 1 0.8090169943749475
v 0 0 0
v -0.9510565162951535 0 0.30901699437494745
v -0.9510565162951536 0 -0.30901699437494734
v -0.9510565162951536 0 -0.30901699437494734
v -0.9510565162951535 0 0.30901699437494745
v -0.9510565162951535 1 0.30901699437494745
v -0.9510565162951536 1 -0.30901699437494734
v 0 1 0
v -0.9510565162951536 1 -0.30901699437494734
v -0.9510565162951535 1 0.30901699437494745
v 0 0 0
v -0.9510565162951536 0 -0.30901699437494734
v -0.5877852522924732 0 -0.8090169943749475
v -0.5877852522924732 0 -0.8090169943749475
v -0.9510565162951536 0 -0.30901699437494734
v -0.9510565162951536 1 -0.30901699437494734
v -0.5877852522924732 1 -0.8090169943749475
v 0 1 0
v -0.5877852522924732 1 -0.8090169943749475
v -0.9510565162951536 1 -0.30901699437494734
v 0 0 0
v -0.5877852522924732 0 -0.8090169943749475
v -1.2246467991473532e-16 0 -1
v -1.2246467991473532e-16 0 -1
v -0.5877852522924732 0 -0.8090169943749475
v -0.5877852522924732 1 -0.8090169943749475
v -1.2246467991473532e-16 1 -1
v 0 1 0
v -1.2246467991473532e-16 1 -1
v -0.5877852522924732 1 -0.8090169943749475
v 0 0 0
v -1.2246467991473532e-16 0 -1
v 0.587785252292473 0 -0.8090169943749475
v 0.587785252292473 0 -0.8090169943749475
v -1.2246467991473532e-16 0 -1
v -1.2246467991473532e-16 1 -1
v 0.587785252292473 1 -0.8090169943749475
v 0 1 0
v 0.587785252292473 1 -0.8090169943749475
v -1.2246467991473532e-16 1 -1
v 0 0 0
v 0.587785252292473 0 -0.8090169943749475
v 0.9510565162951535 0 -0.30901699437494756
v 0.9510565162951535 0 -0.30901699437494756
v 0.587785252292473 0 -0.8090169943749475
v 0.587785252292473 1 -0.8090169943749475
v 0.9510565162951535 1 -0.30901699437494756
v 0 1 0
v 0.9510565162951535 1 -0.30901699437494756
v 0.587785252292473 1 -0.8090169943749475
v 0 0 0
v 0.9510565162951535 0 -0.30901699437494756
v 0.9510565162951536 0 0.30901699437494723
v 0.9510565162951536 0 0.30901699437494723
v 0.9510565162951535 0 -0.30901699437494756
v 0.9510565162951535 1 -0.30901699437494756
v 0.9510565162951536 1 0.30901699437494723
v 0 1 0
v 0.9510565162951536 1 0.30901699437494723
v 0.9510565162951535 1 -0.30901699437494756
v 0 0 0
v 0.9510565162951536 0 0.30901699437494723
v 0.5877852522924734 0 0.8090169943749472
v 0.5877852522924734 0 0.8090169943749472
v 0.9510565162951536 0 0.30901699437494723
v 0.9510565162951536 1 0.30901699437494723
v 0.5877852522924734 1 0.8090169943749472
v 0 1 0
v 0.5877852522924734 1 0.8090169943749472
v 0.9510565162951536 1 0.30901699437494723
v 0 0 0
v 0.5877852522924734 0 0.8090169943749472
v 2.4492935982947064e-16 0 1
v 2.4492935982947064e-16 0 1
v 0.5877852522924734 0 0.8090169943749472
v 0.5877852522924734 1 0.8090169943749472
v 2.4492935982947064e-16 1 1
v 0 1 0
v 2.4492935982947064e-16 1 1
v 0.5877852522924734 1 0.8090169943749472
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.5877852522924731 0 0.8090169943749475
vn 0 0 1
vn 0 0 1
vn -0.5877852522924731 0 0.8090169943749475
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.9510565162951535 0 0.30901699437494745
vn -0.5877852522924731 0 0.8090169943749475
vn -0.5877852522924731 0 0.8090169943749475
vn -0.9510565162951535 0 0.30901699437494745
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.9510565162951536 0 -0.30901699437494734
vn -0.9510565162951535 0 0.30901699437494745
vn -0.9510565162951535 0 0.30901699437494745
vn -0.9510565162951536 0 -0.30901699437494734
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -0.5877852522924732 0 -0.8090169943749475
vn -0.9510565162951536 0 -0.30901699437494734
vn -0.9510565162951536 0 -0.30901699437494734
vn -0.5877852522924732 0 -0.8090169943749475
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn -1.2246467991473532e-16 0 -1
vn -0.5877852522924732 0 -0.8090169943749475
vn -0.5877852522924732 0 -0.8090169943749475
vn -1.2246467991473532e-16 0 -1
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.587785252292473 0 -0.8090169943749475
vn -1.2246467991473532e-16 0 -1
vn -1.2246467991473532e-16 0 -1
vn 0.587785252292473 0 -0.8090169943749475
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.9510565162951535 0 -0.30901699437494756
vn 0.587785252292473 0 -0.8090169943749475
vn 0.587785252292473 0 -0.8090169943749475
vn 0.9510565162951535 0 -0.30901699437494756
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.9510565162951536 0 0.30901699437494723
vn 0.9510565162951535 0 -0.30901699437494756
vn 0.9510565162951535 0 -0.30901699437494756
vn 0.9510565162951536 0 0.30901699437494723
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0.5877852522924734 0 0.8090169943749472
vn 0.9510565162951536 0 0.30901699437494723
vn 0.9510565162951536 0 0.30901699437494723
vn 0.5877852522924734 0 0.8090169943749472
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 2.4492935982947064e-16 0 1
vn 0.5877852522924734 0 0.8090169943749472
vn 0.5877852522924734 0 0.8090169943749472
vn 2.4492935982947064e-16 0 1
vn 0 1 0
vn 0 1 0
vn 0 1 0
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 4//4 6//6 7//7
f 8//8 9//9 10//10
f 11//11 12//12 13//13
f 14//14 15//15 16//16
f 14//14 16//16 17//17
f 18//18 19//19 20//20
f 21//21 22//22 23//23
f 24//24 25//25 26//26
f 24//24 26//26 27//27
f 28//28 29//29 30//30
f 31//31 32//32 33//33
f 34//34 35//35 36//36
f 34//34 36//36 37//37
f 38//38 39//39 40//40
f 41//41 42//42 43//43
f 44//44 45//45 46//46
f 44//44 46//46 47//47
f 48//48 49//49 50//50
f 51//51 52//52 53//53
f 54//54 55//55 56//56
f 54//54 56//56 57//57
f 58//58 59//59 60//60
f 61//61 62//62 63//63
f 64//64 65//65 66//66
f 64//64 66//66 67//67
f 68//68 69//69 70//70
f 71//71 72//72 73//73
f 74//74 75//75 76//76
f 74//74 76//76 77//77
f 78//78 79//79 80//80
f 81//81 82//82 83//83
f 84//84 85//85 86//86
f 84//84 86//86 87//87
f 88//88 89//89 90//90
f 91//91 92//92 93//93
f 94//94 95//95 96//96
f 94//94 96//96 97//97
f 98//98 99//99 100//100
"
`;

exports[`cylinder cylinder diag 1`] = `
"v 0 0 0
v 0 -0.7071067811865476 0.7071067811865476
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v 0 -0.7071067811865476 0.7071067811865476
v 1 0.2928932188134524 1.7071067811865475
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 1 1 1
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 1 0.2928932188134524 1.7071067811865475
v 0 0 0
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v -0.47992464881654523 -0.3320990784094118 0.812023727225957
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 1 1 1
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 0.5200753511834548 0.6679009215905882 1.812023727225957
v 0 0 0
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v -0.7765343938240271 0.16975918468760298 0.6067752091364241
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 1 1 1
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 0.2234656061759729 1.169759184687603 1.606775209136424
v 0 0 0
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v -0.47992464881654534 0.8120237272259571 -0.33209907840941166
v -0.47992464881654534 0.8120237272259571 -0.33209907840941166
v -0.7765343938240272 0.6067752091364241 0.16975918468760312
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 0.5200753511834546 1.8120237272259572 0.6679009215905883
v 1 1 1
v 0.5200753511834546 1.8120237272259572 0.6679009215905883
v 0.22346560617597278 1.606775209136424 1.1697591846876032
v 0 0 0
v -0.47992464881654534 0.8120237272259571 -0.33209907840941166
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v -0.47992464881654534 0.8120237272259571 -0.33209907840941166
v 0.5200753511834546 1.8120237272259572 0.6679009215905883
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 1 1 1
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 0.5200753511834546 1.8120237272259572 0.6679009215905883
v 0 0 0
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 1 1 1
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 0.9999999999999999 1.7071067811865475 0.2928932188134524
v 0 0 0
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 0.4799246488165451 0.3320990784094118 -0.812023727225957
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 1 1 1
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 1.4799246488165452 1.3320990784094118 0.18797627277404305
v 0 0 0
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 1 1 1
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 1.776534393824027 0.8302408153123971 0.39322479086357576
v 0 0 0
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 0.7765343938240272 -0.606775209136424 -0.1697591846876032
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
v 1 1 1
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
v 1.7765343938240272 0.393224790863576 0.8302408153123968
v 0 0 0
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
v 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
v 0.4799246488165454 -0.812023727225957 0.33209907840941155
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
v 1.0000000000000002 0.2928932188134523 1.7071067811865475
v 1 1 1
v 1.0000000000000002 0.2928932188134523 1.7071067811865475
v 1.4799246488165454 0.18797627277404305 1.3320990784094116
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn 0 -0.7071067811865476 0.7071067811865476
vn 0 -0.7071067811865476 0.7071067811865476
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn -0.47992464881654523 -0.3320990784094118 0.812023727225957
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn -0.7765343938240271 0.16975918468760298 0.6067752091364241
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.47992464881654534 0.8120237272259571 -0.33209907840941166
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn -0.7765343938240272 0.6067752091364241 0.16975918468760312
vn -0.47992464881654534 0.8120237272259571 -0.33209907840941166
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn -0.47992464881654534 0.8120237272259571 -0.33209907840941166
vn -0.47992464881654534 0.8120237272259571 -0.33209907840941166
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn -9.999199243478977e-17 0.7071067811865476 -0.7071067811865476
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn 0.4799246488165451 0.3320990784094118 -0.812023727225957
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.7765343938240271 -0.1697591846876029 -0.6067752091364242
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.7765343938240272 -0.606775209136424 -0.1697591846876032
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn -0.5773502691896258 -0.5773502691896258 -0.5773502691896258
vn 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 0.4799246488165454 -0.812023727225957 0.33209907840941155
vn 1.9998398486957954e-16 -0.7071067811865477 0.7071067811865475
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
vn 0.5773502691896258 0.5773502691896258 0.5773502691896258
f 1//1 2//2 3//3
f 4//4 5//5 6//6
f 4//4 6//6 7//7
f 8//8 9//9 10//10
f 11//11 12//12 13//13
f 14//14 15//15 16//16
f 14//14 16//16 17//17
f 18//18 19//19 20//20
f 21//21 22//22 23//23
f 24//24 25//25 26//26
f 24//24 26//26 27//27
f 28//28 29//29 30//30
f 31//31 32//32 33//33
f 34//34 35//35 36//36
f 34//34 36//36 37//37
f 38//38 39//39 40//40
f 41//41 42//42 43//43
f 44//44 45//45 46//46
f 44//44 46//46 47//47
f 48//48 49//49 50//50
f 51//51 52//52 53//53
f 54//54 55//55 56//56
f 54//54 56//56 57//57
f 58//58 59//59 60//60
f 61//61 62//62 63//63
f 64//64 65//65 66//66
f 64//64 66//66 67//67
f 68//68 69//69 70//70
f 71//71 72//72 73//73
f 74//74 75//75 76//76
f 74//74 76//76 77//77
f 78//78 79//79 80//80
f 81//81 82//82 83//83
f 84//84 85//85 86//86
f 84//84 86//86 87//87
f 88//88 89//89 90//90
f 91//91 92//92 93//93
f 94//94 95//95 96//96
f 94//94 96//96 97//97
f 98//98 99//99 100//100
"
`;
